# copier-typst-package

./: CHANGELOG.md  Justfile  README.md  copier.yml  pyproject.toml
template/: .pre-commit-config.yaml  .typstignore  Justfile  README.md.jinja  typst.toml.jinja  {% if copyright_license != "None" %}LICENSE{% endif %}.jinja
template/.github/workflows/: ci.yml  release.yml  release.yml.jinja  release_github.yml
template/docs/: docs.typ.jinja  thumbnail.typ.jinja
template/src/: lib.typ.jinja
template/template/: main.typ.jinja
tests/: conftest.py  test_copier.py
