[project]
name = "py-bootstrap"
version = "0.2.3"
description = "Bootstrap your Python Package Development"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.14",
]
dependencies = [
    "copier>=9.12.0",
]

[dependency-groups]
dev = ["pydantic>=2.12.5", "pytest>=9.0.2", "ruff>=0.14.9", "ty>=0.0.3"]

[tool.ruff]
line-length = 88
indent-width = 4
format.indent-style = "space"
format.quote-style = "double"
format.line-ending = "auto"
format.skip-magic-trailing-comma = false
format.docstring-code-line-length = "dynamic"
format.docstring-code-format = false
lint.select = ["ALL"]
lint.ignore = [
	"COM812", # missing-trailing-comma (may conflict with ruff formatter)
	"D203",   # incorrect-blank-line-before-class (conflicts with D211)
	"D213",   # multi-line-summary-second-line (conflicts with D212)
]
lint.per-file-ignores."**/{tests}/*" = [
	"ANN001",
	"ANN201",
	"D",
	"E402",
	"INP001",
	"S101",
]
lint.per-file-ignores."extensions.py" = ["D"]
lint.fixable = ["ALL"]
lint.unfixable = []

[tool.pytest]
filterwarnings = [
	"ignore::DeprecationWarning",
	"ignore:Dirty template changes included automatically",
]
